# ics_cobraCharmer

./: .gitignore  README.md  SConstruct  cmds.py  func.py  gui_manual.py  log.py  pyproject.toml  setup.py
docs/: Makefile  PFI_API_2020.md  conf.py  index.rst
log/: 20171006-163934.csv
notebooks/: FPGA-CIT.ipynb  FPGA.ipynb  coarse.ipynb  cobra.ipynb  convergence.ipynb  inspectPhiOntime.ipynb  inspectThetaOntime.ipynb  mapcobras.ipynb  motormap.ipynb  perCobraTests.ipynb  precise.ipynb  precise2.ipynb  stability_asiaa.ipynb
notebooks/CIT/: InitialProcedures-CIT.ipynb  debugging.ipynb
original_files/: convert.py  ethernet.py  func.py  gui_manual.py  main.py  manualgui.bat
procedures/: adjustMotorOntime.py  analyzeMotorMap.py  bootstrapGeometry.py  calibrateMotorFrequencies.py  checkMotorMap.py  exploreOntimeParameter.py  explorePhiOntime.py  exploreThetaOntime.py  geometryTable.py  idsCamera.py  inspectOntime.py  makeMotorMap.py  makeMotorMap2.py  makePhiMotorMap.py  makePreciseCoord.py  makeStackedImage.py  makeThetaMotorMap.py  minimal_motormap.py  oneDimTest.py  oneDimTestNew.py  optimizeOnTime.py  runPhiOntime.py  runThetaMotormap.py  setFiberUDPos.py  targetConvergence.py  transferCoordCITtoASRD.py  transformCenters.py  updatePhiOntime.py  utils.py
procedures/cit/: bootstrapModule.py  calibrateMotorFrequencies.py  transformCenters.py
procedures/moduleTest/: Trajectories.ipynb  TwoModuleTest.ipynb  analyze.ipynb  analyzePhi.ipynb  build_maps_with_dots.py  calculation.py  calculus.py  cobraCoach.ipynb  cobraCoach.py  engineer.py  inspectPhiOntime.ipynb  mapHandler.py  moduleAnalyze.py  moduleGUI.py  moduleTest.ipynb  moduleTest.py  moduleTestScience02.ipynb  moduleTestScience03.ipynb  moduleTestScience04.ipynb  moduleTestScience06.ipynb  moduleTestScience15.ipynb  moduleTestScience16.ipynb  moduleTestScience17.ipynb  moduleTestScience18.ipynb  moduleTestScience29.ipynb  moduleTestScience30.ipynb  moduleTestScience31.ipynb  moduleTestScience32.ipynb  motor1maps.ipynb  motor2maps.ipynb  (+6 more)
python/: procedures
ups/: ics_cobraCharmer.table  ics_cobraControl.table
xml/: motormap_20190128.xml  motormap_20190211.xml  motormap_20190312.xml  motormap_20190426_50steps.xml  motormaps_181205.xml  precise5.xml  precise_20190212.xml  precise_20190304.xml  updateOntime_spare02_20190426.xml  updateOntime_spare02_20190426ori.xml  updatePhiOntime_spare02_20190401.xml  updatedLinksAndMaps.xml
(+96 files in other folders)
